// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config/presets getPreset gets linters 1`] = `
Object {
  "description": Array [
    "All lint-related packages",
  ],
  "extends": Array [
    "packages:eslint",
    "packages:stylelint",
    "packages:tslint",
  ],
  "packageNames": Array [
    "remark-lint",
  ],
}
`;

exports[`config/presets getPreset gets parameterised configs 1`] = `
Object {
  "description": Array [
    "Group eslint packages into same branch/PR",
  ],
  "packageRules": Array [
    Object {
      "extends": Array [
        "packages:eslint",
      ],
      "groupName": "eslint",
    },
  ],
}
`;

exports[`config/presets getPreset handles 404 packages 1`] = `undefined`;

exports[`config/presets getPreset handles 404 packages 2`] = `undefined`;

exports[`config/presets getPreset handles 404 packages 3`] = `undefined`;

exports[`config/presets getPreset handles missing params 1`] = `
Object {
  "description": Array [
    "Group {{arg1}} packages into same branch/PR",
  ],
  "packageRules": Array [
    Object {
      "extends": Array [
        "",
      ],
      "groupName": "{{arg1}}",
    },
  ],
}
`;

exports[`config/presets getPreset handles no config 1`] = `undefined`;

exports[`config/presets getPreset handles no config 2`] = `undefined`;

exports[`config/presets getPreset handles no config 3`] = `undefined`;

exports[`config/presets getPreset handles preset not found 1`] = `undefined`;

exports[`config/presets getPreset handles preset not found 2`] = `undefined`;

exports[`config/presets getPreset handles preset not found 3`] = `undefined`;

exports[`config/presets getPreset handles throw errors 1`] = `undefined`;

exports[`config/presets getPreset handles throw errors 2`] = `undefined`;

exports[`config/presets getPreset handles throw errors 3`] = `undefined`;

exports[`config/presets getPreset ignores irrelevant params 1`] = `
Object {
  "description": Array [
    "Use version pinning (maintain a single version only and not semver ranges)",
  ],
  "rangeStrategy": "pin",
}
`;

exports[`config/presets parsePreset parses github 1`] = `
Object {
  "packageName": "some/repo",
  "params": undefined,
  "presetName": "default",
  "presetSource": "github",
}
`;

exports[`config/presets parsePreset parses github subfiles 1`] = `
Object {
  "packageName": "some/repo",
  "params": undefined,
  "presetName": "somefile",
  "presetSource": "github",
}
`;

exports[`config/presets parsePreset parses github subfiles with preset and sub-preset name 1`] = `
Object {
  "packageName": "some/repo",
  "params": undefined,
  "presetName": "somefile/somepreset/somesubpreset",
  "presetSource": "github",
}
`;

exports[`config/presets parsePreset parses github subfiles with preset name 1`] = `
Object {
  "packageName": "some/repo",
  "params": undefined,
  "presetName": "somefile/somepreset",
  "presetSource": "github",
}
`;

exports[`config/presets parsePreset parses gitlab 1`] = `
Object {
  "packageName": "some/repo",
  "params": undefined,
  "presetName": "default",
  "presetSource": "gitlab",
}
`;

exports[`config/presets parsePreset parses local 1`] = `
Object {
  "packageName": "some/repo",
  "params": undefined,
  "presetName": "default",
  "presetSource": "local",
}
`;

exports[`config/presets parsePreset parses no prefix as local 1`] = `
Object {
  "packageName": "some/repo",
  "params": undefined,
  "presetName": "default",
  "presetSource": "local",
}
`;

exports[`config/presets parsePreset returns default package name 1`] = `
Object {
  "packageName": "renovatebot/presets",
  "params": undefined,
  "presetName": "presets/default/base",
  "presetSource": "github",
}
`;

exports[`config/presets parsePreset returns default package name with params 1`] = `
Object {
  "packageName": "renovatebot/presets",
  "params": Array [
    "packages/eslint",
    "eslint",
  ],
  "presetName": "presets/default/group",
  "presetSource": "github",
}
`;

exports[`config/presets parsePreset returns non-scoped default 1`] = `
Object {
  "packageName": "renovate-config-somepackage",
  "params": undefined,
  "presetName": "default",
  "presetSource": "npm",
}
`;

exports[`config/presets parsePreset returns non-scoped package name 1`] = `
Object {
  "packageName": "renovate-config-somepackage",
  "params": undefined,
  "presetName": "webapp",
  "presetSource": "npm",
}
`;

exports[`config/presets parsePreset returns non-scoped package name full 1`] = `
Object {
  "packageName": "renovate-config-somepackage",
  "params": undefined,
  "presetName": "webapp",
  "presetSource": "npm",
}
`;

exports[`config/presets parsePreset returns non-scoped package name with params 1`] = `
Object {
  "packageName": "renovate-config-somepackage",
  "params": Array [
    "param1",
  ],
  "presetName": "webapp",
  "presetSource": "npm",
}
`;

exports[`config/presets parsePreset returns scope with packageName and default 1`] = `
Object {
  "packageName": "@somescope/somepackagename",
  "params": undefined,
  "presetName": "default",
  "presetSource": "npm",
}
`;

exports[`config/presets parsePreset returns scope with packageName and params and default 1`] = `
Object {
  "packageName": "@somescope/somepackagename",
  "params": Array [
    "param1",
    "param2",
    "param3",
  ],
  "presetName": "default",
  "presetSource": "npm",
}
`;

exports[`config/presets parsePreset returns scope with packageName and presetName 1`] = `
Object {
  "packageName": "@somescope/somepackagename",
  "params": undefined,
  "presetName": "somePresetName",
  "presetSource": "npm",
}
`;

exports[`config/presets parsePreset returns scope with packageName and presetName and params 1`] = `
Object {
  "packageName": "@somescope/somepackagename",
  "params": Array [
    "param1",
    "param2",
  ],
  "presetName": "somePresetName",
  "presetSource": "npm",
}
`;

exports[`config/presets parsePreset returns scope with presetName 1`] = `
Object {
  "packageName": "@somescope/renovate-config",
  "params": undefined,
  "presetName": "somePresetName",
  "presetSource": "npm",
}
`;

exports[`config/presets parsePreset returns scope with presetName and params 1`] = `
Object {
  "packageName": "@somescope/renovate-config",
  "params": Array [
    "param1",
  ],
  "presetName": "somePresetName",
  "presetSource": "npm",
}
`;

exports[`config/presets parsePreset returns simple scope 1`] = `
Object {
  "packageName": "@somescope/renovate-config",
  "params": undefined,
  "presetName": "default",
  "presetSource": "npm",
}
`;

exports[`config/presets parsePreset returns simple scope and params 1`] = `
Object {
  "packageName": "@somescope/renovate-config",
  "params": Array [
    "param1",
  ],
  "presetName": "default",
  "presetSource": "npm",
}
`;

exports[`config/presets replaceArgs replaces args in strings 1`] = `"c foo ab"`;

exports[`config/presets replaceArgs replaces arrays 1`] = `
Object {
  "foo": Array [
    "a",
    Object {
      "bar": "b",
      "baz": 5,
    },
  ],
}
`;

exports[`config/presets replaceArgs replaces objects 1`] = `
Object {
  "bar": Object {
    "aaa": Object {
      "bbb": "woo c",
    },
    "baz": "b boo",
  },
  "foo": "ha a",
}
`;

exports[`config/presets resolvePreset combines two package alls 1`] = `
Object {
  "packageNames": Array [
    "babel-eslint",
  ],
  "packagePatterns": Array [
    "^eslint",
    "^stylelint",
  ],
}
`;

exports[`config/presets resolvePreset ignores presets 1`] = `Object {}`;

exports[`config/presets resolvePreset migrates automerge in presets 1`] = `
Object {
  "automergeType": "pr",
  "branchPrefix": "renovate/",
  "description": Array [
    "Use <code>renovate/</code> as prefix for all branch names",
    "If semantic commits detected, use semantic commit type <code>fix</code> for dependencies and <code>chore</code> for all others",
    "Require all status checks to pass before any automerging",
    "Pin dependency versions for <code>devDependencies</code> and retain semver ranges for others",
  ],
  "ignoreUnstable": true,
  "labels": Array [
    "dependencies",
  ],
  "lockFileMaintenance": Object {
    "automerge": true,
    "enabled": true,
    "schedule": Array [
      "before 8am on Monday",
    ],
  },
  "major": Object {
    "automerge": false,
  },
  "minor": Object {
    "automerge": true,
  },
  "packageRules": Array [
    Object {
      "packagePatterns": Array [
        "*",
      ],
      "semanticCommitType": "chore",
    },
    Object {
      "depTypeList": Array [
        "dependencies",
      ],
      "semanticCommitType": "fix",
    },
    Object {
      "packagePatterns": Array [
        "*",
      ],
      "rangeStrategy": "replace",
    },
    Object {
      "depTypeList": Array [
        "devDependencies",
      ],
      "rangeStrategy": "pin",
    },
    Object {
      "depTypeList": Array [
        "peerDependencies",
      ],
      "rangeStrategy": "widen",
    },
  ],
  "prCreation": "immediate",
  "rebaseWhen": "behind-base-branch",
  "requiredStatusChecks": Array [],
  "respectLatest": true,
  "schedule": Array [
    "before 8am",
  ],
  "semanticCommits": true,
  "separateMajorMinor": true,
  "separateMinorPatch": false,
  "timezone": "Asia/Taipei",
  "unpublishSafe": false,
}
`;

exports[`config/presets resolvePreset resolves eslint 1`] = `
Object {
  "packageNames": Array [
    "babel-eslint",
  ],
  "packagePatterns": Array [
    "^eslint",
  ],
}
`;

exports[`config/presets resolvePreset resolves group monorepos 1`] = `
Object {
  "description": Array [
    "Group known monorepo packages together",
  ],
  "ignoreDeps": Array [],
  "packageRules": Array [
    Object {
      "description": Array [
        "ag-grid monorepo",
        "Group packages from ag-grid monorepo together",
      ],
      "groupName": "ag-grid monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/ag-grid/ag-grid",
      ],
    },
    Object {
      "description": Array [
        "arcus event-grid monorepo",
        "Group packages from arcus event-grid monorepo together",
      ],
      "groupName": "arcus event-grid monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/arcus-azure/arcus.eventgrid",
      ],
    },
    Object {
      "description": Array [
        "arcus security monorepo",
        "Group packages from arcus security monorepo together",
      ],
      "groupName": "arcus security monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/arcus-azure/arcus.security",
      ],
    },
    Object {
      "description": Array [
        "arcus messaging monorepo",
        "Group packages from arcus messaging monorepo together",
      ],
      "groupName": "arcus messaging monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/arcus-azure/arcus.messaging",
      ],
    },
    Object {
      "description": Array [
        "arcus observability monorepo",
        "Group packages from arcus observability monorepo together",
      ],
      "groupName": "arcus observability monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/arcus-azure/arcus.observability",
      ],
    },
    Object {
      "description": Array [
        "arcus webapi monorepo",
        "Group packages from arcus webapi monorepo together",
      ],
      "groupName": "arcus webapi monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/arcus-azure/arcus.webapi",
      ],
    },
    Object {
      "description": Array [
        "arcus background-jobs monorepo",
        "Group packages from arcus background-jobs monorepo together",
      ],
      "groupName": "arcus background-jobs monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/arcus-azure/arcus.backgroundjobs",
      ],
    },
    Object {
      "description": Array [
        "algolia-react-instantsearch monorepo",
        "Group packages from algolia-react-instantsearch monorepo together",
      ],
      "groupName": "algolia-react-instantsearch monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/algolia/react-instantsearch",
      ],
    },
    Object {
      "description": Array [
        "apollo-server monorepo",
        "Group packages from apollo-server monorepo together",
      ],
      "groupName": "apollo-server monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/apollographql/apollo-server",
      ],
    },
    Object {
      "description": Array [
        "aspnet AspNetWebStack monorepo",
        "Group packages from aspnet AspNetWebStack monorepo together",
      ],
      "groupName": "aspnet AspNetWebStack monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/aspnet/AspNetWebStack",
      ],
    },
    Object {
      "description": Array [
        "aspnet Extensions monorepo",
        "Group packages from aspnet Extensions monorepo together",
      ],
      "groupName": "aspnet Extensions monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/aspnet/Extensions",
      ],
    },
    Object {
      "description": Array [
        "aws-cdk monorepo",
        "Group packages from aws-cdk monorepo together",
      ],
      "groupName": "aws-cdk monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/aws/aws-cdk",
      ],
    },
    Object {
      "description": Array [
        "azure azure-libraries-for-net monorepo",
        "Group packages from azure azure-libraries-for-net monorepo together",
      ],
      "groupName": "azure azure-libraries-for-net monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/Azure/azure-libraries-for-net",
      ],
    },
    Object {
      "description": Array [
        "azure azure-sdk-for-net monorepo",
        "Group packages from azure azure-sdk-for-net monorepo together",
      ],
      "groupName": "azure azure-sdk-for-net monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/Azure/azure-sdk-for-net",
      ],
    },
    Object {
      "description": Array [
        "azure azure-storage-net monorepo",
        "Group packages from azure azure-storage-net monorepo together",
      ],
      "groupName": "azure azure-storage-net monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/Azure/azure-storage-net",
      ],
    },
    Object {
      "description": Array [
        "bugsnag-js monorepo",
        "Group packages from bugsnag-js monorepo together",
      ],
      "groupName": "bugsnag-js monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/bugsnag/bugsnag-js",
      ],
    },
    Object {
      "description": Array [
        "devextreme-reactive monorepo",
        "Group packages from devextreme-reactive monorepo together",
      ],
      "groupName": "devextreme-reactive monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/DevExpress/devextreme-reactive",
      ],
    },
    Object {
      "description": Array [
        "electron-forge monorepo",
        "Group packages from electron-forge monorepo together",
      ],
      "groupName": "electron-forge monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/electron-userland/electron-forge",
      ],
    },
    Object {
      "description": Array [
        "ember-decorators monorepo",
        "Group packages from ember-decorators monorepo together",
      ],
      "groupName": "ember-decorators monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/ember-decorators/ember-decorators",
      ],
    },
    Object {
      "description": Array [
        "graphql-modules monorepo",
        "Group packages from graphql-modules monorepo together",
      ],
      "groupName": "graphql-modules monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/Urigo/graphql-modules",
      ],
    },
    Object {
      "description": Array [
        "ionic-native monorepo",
        "Group packages from ionic-native monorepo together",
      ],
      "groupName": "ionic-native monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/ionic-team/ionic-native",
      ],
    },
    Object {
      "description": Array [
        "mdc-react monorepo",
        "Group packages from mdc-react monorepo together",
      ],
      "groupName": "mdc-react monorepo",
      "sourceUrlPrefixes": Array [
        "material-components/material-components-web-react",
      ],
    },
    Object {
      "description": Array [
        "ngx-formly monorepo",
        "Group packages from ngx-formly monorepo together",
      ],
      "groupName": "ngx-formly monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/ngx-formly/ngx-formly",
      ],
    },
    Object {
      "description": Array [
        "ngxs-store monorepo",
        "Group packages from ngxs-store monorepo together",
      ],
      "groupName": "ngxs-store monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/ngxs/store",
      ],
    },
    Object {
      "description": Array [
        "react-apollo monorepo",
        "Group packages from react-apollo monorepo together",
      ],
      "groupName": "react-apollo monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/apollographql/react-apollo",
      ],
    },
    Object {
      "description": Array [
        "react-dnd monorepo",
        "Group packages from react-dnd monorepo together",
      ],
      "groupName": "react-dnd monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/react-dnd/react-dnd",
      ],
    },
    Object {
      "description": Array [
        "react-navigation monorepo",
        "Group packages from react-navigation monorepo together",
      ],
      "groupName": "react-navigation monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/react-navigation/react-navigation",
      ],
    },
    Object {
      "description": Array [
        "reactivestack-cookies monorepo",
        "Group packages from reactivestack-cookies monorepo together",
      ],
      "groupName": "reactivestack-cookies monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/reactivestack/cookies",
      ],
    },
    Object {
      "description": Array [
        "semantic-release monorepo",
        "Group packages from semantic-release monorepo together",
      ],
      "groupName": "semantic-release monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/semantic-release/",
      ],
    },
    Object {
      "description": Array [
        "telus-tds monorepo",
        "Group packages from telus-tds monorepo together",
      ],
      "groupName": "telus-tds monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/telusdigital/tds",
      ],
    },
    Object {
      "description": Array [
        "typescript-eslint monorepo",
        "Group packages from typescript-eslint monorepo together",
      ],
      "groupName": "typescript-eslint monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/typescript-eslint/typescript-eslint",
      ],
    },
    Object {
      "description": Array [
        "typography-js monorepo",
        "Group packages from typography-js monorepo together",
      ],
      "groupName": "typography-js monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/KyleAMathews/typography.js",
      ],
    },
    Object {
      "description": Array [
        "vue-cli monorepo",
        "Group packages from vue-cli monorepo together",
      ],
      "groupName": "vue-cli monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/vuejs/vue-cli",
      ],
    },
    Object {
      "description": Array [
        "accounts monorepo",
        "Group packages from accounts monorepo together",
      ],
      "groupName": "accounts monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/accounts-js/accounts",
      ],
    },
    Object {
      "description": Array [
        "angular1 monorepo",
        "Group packages from angular1 monorepo together",
      ],
      "groupName": "angular1 monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/angular/angular.js",
      ],
    },
    Object {
      "description": Array [
        "angular monorepo",
        "Group packages from angular monorepo together",
      ],
      "groupName": "angular monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/angular/angular",
      ],
    },
    Object {
      "description": Array [
        "angularcli monorepo",
        "Group packages from angularcli monorepo together",
      ],
      "groupName": "angularcli monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/angular/angular-cli",
      ],
    },
    Object {
      "description": Array [
        "apolloclient monorepo",
        "Group packages from apolloclient monorepo together",
      ],
      "groupName": "apolloclient monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/apollographql/apollo-client",
      ],
    },
    Object {
      "description": Array [
        "apollolink monorepo",
        "Group packages from apollolink monorepo together",
      ],
      "groupName": "apollolink monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/apollographql/apollo-link",
      ],
    },
    Object {
      "description": Array [
        "awsappsync monorepo",
        "Group packages from awsappsync monorepo together",
      ],
      "groupName": "awsappsync monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/awslabs/aws-mobile-appsync-sdk-js",
      ],
    },
    Object {
      "description": Array [
        "babel monorepo",
        "Group packages from babel monorepo together",
      ],
      "groupName": "babel monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/babel/babel",
      ],
    },
    Object {
      "description": Array [
        "baset monorepo",
        "Group packages from baset monorepo together",
      ],
      "groupName": "baset monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/igmat/baset",
      ],
    },
    Object {
      "description": Array [
        "brave monorepo",
        "Group packages from brave monorepo together",
      ],
      "groupName": "brave monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/openzipkin/brave",
      ],
    },
    Object {
      "description": Array [
        "capacitor monorepo",
        "Group packages from capacitor monorepo together",
      ],
      "groupName": "capacitor monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/ionic-team/capacitor",
      ],
    },
    Object {
      "description": Array [
        "clarity monorepo",
        "Group packages from clarity monorepo together",
      ],
      "groupName": "clarity monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/vmware/clarity",
      ],
    },
    Object {
      "description": Array [
        "commitlint monorepo",
        "Group packages from commitlint monorepo together",
      ],
      "groupName": "commitlint monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/conventional-changelog/commitlint",
      ],
    },
    Object {
      "description": Array [
        "dropwizard monorepo",
        "Group packages from dropwizard monorepo together",
      ],
      "groupName": "dropwizard monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/dropwizard/dropwizard",
      ],
    },
    Object {
      "description": Array [
        "emotion monorepo",
        "Group packages from emotion monorepo together",
      ],
      "groupName": "emotion monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/emotion-js/emotion",
      ],
    },
    Object {
      "description": Array [
        "expo monorepo",
        "Group packages from expo monorepo together",
      ],
      "groupName": "expo monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/expo/expo",
      ],
    },
    Object {
      "description": Array [
        "fimbullinter monorepo",
        "Group packages from fimbullinter monorepo together",
      ],
      "groupName": "fimbullinter monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/fimbullinter/wotan",
      ],
    },
    Object {
      "description": Array [
        "flopflip monorepo",
        "Group packages from flopflip monorepo together",
      ],
      "groupName": "flopflip monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/tdeekens/flopflip",
      ],
    },
    Object {
      "description": Array [
        "framework7 monorepo",
        "Group packages from framework7 monorepo together",
      ],
      "groupName": "framework7 monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/framework7io/framework7",
      ],
    },
    Object {
      "description": Array [
        "gatsby monorepo",
        "Group packages from gatsby monorepo together",
      ],
      "groupName": "gatsby monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/gatsbyjs/gatsby",
      ],
    },
    Object {
      "description": Array [
        "graphqlcodegenerator monorepo",
        "Group packages from graphqlcodegenerator monorepo together",
      ],
      "groupName": "graphqlcodegenerator monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/dotansimha/graphql-code-generator",
        "https://github.com/dotansimha/graphql-codegen",
      ],
    },
    Object {
      "description": Array [
        "graphql-toolkit monorepo",
        "Group packages from graphql-toolkit monorepo together",
      ],
      "groupName": "graphql-toolkit monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/ardatan/graphql-toolkit",
      ],
    },
    Object {
      "description": Array [
        "hamcrest monorepo",
        "Group packages from hamcrest monorepo together",
      ],
      "groupName": "hamcrest monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/hamcrest/JavaHamcrest",
      ],
    },
    Object {
      "description": Array [
        "hapijs monorepo",
        "Group packages from hapijs monorepo together",
      ],
      "groupName": "hapijs monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/hapijs",
      ],
    },
    Object {
      "description": Array [
        "infrastructure monorepo",
        "Group packages from infrastructure monorepo together",
      ],
      "groupName": "infrastructure monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/instructure/instructure-ui",
      ],
    },
    Object {
      "description": Array [
        "jasmine monorepo",
        "Group packages from jasmine monorepo together",
      ],
      "groupName": "jasmine monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/jasmine/jasmine",
      ],
    },
    Object {
      "description": Array [
        "jersey monorepo",
        "Group packages from jersey monorepo together",
      ],
      "groupName": "jersey monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/eclipse-ee4j/jersey",
      ],
    },
    Object {
      "description": Array [
        "jest monorepo",
        "Group packages from jest monorepo together",
      ],
      "groupName": "jest monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/facebook/jest",
      ],
    },
    Object {
      "description": Array [
        "lerna monorepo",
        "Group packages from lerna monorepo together",
      ],
      "groupName": "lerna monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/lerna/lerna",
      ],
    },
    Object {
      "description": Array [
        "lingui monorepo",
        "Group packages from lingui monorepo together",
      ],
      "groupName": "lingui monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/lingui/js-lingui",
      ],
    },
    Object {
      "description": Array [
        "lodash monorepo",
        "Group packages from lodash monorepo together",
      ],
      "groupName": "lodash monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/lodash/",
      ],
    },
    Object {
      "description": Array [
        "loopback monorepo",
        "Group packages from loopback monorepo together",
      ],
      "groupName": "loopback monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/strongloop/loopback-next",
      ],
    },
    Object {
      "description": Array [
        "material monorepo",
        "Group packages from material monorepo together",
      ],
      "groupName": "material monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/material-components/material-components-web",
      ],
    },
    Object {
      "description": Array [
        "mdx monorepo",
        "Group packages from mdx monorepo together",
      ],
      "groupName": "mdx monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/mdx-js/mdx",
      ],
    },
    Object {
      "description": Array [
        "mui monorepo",
        "Group packages from mui monorepo together",
      ],
      "groupName": "mui monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/mui-org/material-ui",
      ],
    },
    Object {
      "description": Array [
        "nest monorepo",
        "Group packages from nest monorepo together",
      ],
      "groupName": "nest monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/nestjs/nest",
      ],
    },
    Object {
      "description": Array [
        "neutrino monorepo",
        "Group packages from neutrino monorepo together",
      ],
      "groupName": "neutrino monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/neutrinojs/neutrino",
        "https://github.com/mozilla-neutrino/neutrino-dev",
      ],
    },
    Object {
      "description": Array [
        "nextjs monorepo",
        "Group packages from nextjs monorepo together",
      ],
      "groupName": "nextjs monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/zeit/next.js",
      ],
    },
    Object {
      "description": Array [
        "ngrx monorepo",
        "Group packages from ngrx monorepo together",
      ],
      "groupName": "ngrx monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/ngrx/",
      ],
    },
    Object {
      "description": Array [
        "nrwl monorepo",
        "Group packages from nrwl monorepo together",
      ],
      "groupName": "nrwl monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/nrwl/",
      ],
    },
    Object {
      "description": Array [
        "nuxtjs monorepo",
        "Group packages from nuxtjs monorepo together",
      ],
      "groupName": "nuxtjs monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/nuxt/nuxt.js",
      ],
    },
    Object {
      "description": Array [
        "openfeign monorepo",
        "Group packages from openfeign monorepo together",
      ],
      "groupName": "openfeign monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/OpenFeign/feign",
      ],
    },
    Object {
      "description": Array [
        "picasso monorepo",
        "Group packages from picasso monorepo together",
      ],
      "groupName": "picasso monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/qlik-oss/picasso.js",
      ],
    },
    Object {
      "description": Array [
        "pollyjs monorepo",
        "Group packages from pollyjs monorepo together",
      ],
      "groupName": "pollyjs monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/Netflix/pollyjs",
      ],
    },
    Object {
      "description": Array [
        "pouchdb monorepo",
        "Group packages from pouchdb monorepo together",
      ],
      "groupName": "pouchdb monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/pouchdb/pouchdb",
      ],
    },
    Object {
      "description": Array [
        "react monorepo",
        "Group packages from react monorepo together",
      ],
      "groupName": "react monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/facebook/react",
      ],
    },
    Object {
      "description": Array [
        "reactrouter monorepo",
        "Group packages from reactrouter monorepo together",
      ],
      "groupName": "reactrouter monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/ReactTraining/react-router",
      ],
    },
    Object {
      "description": Array [
        "reakit monorepo",
        "Group packages from reakit monorepo together",
      ],
      "groupName": "reakit monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/reakit/reakit",
      ],
    },
    Object {
      "description": Array [
        "remark monorepo",
        "Group packages from remark monorepo together",
      ],
      "groupName": "remark monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/remarkjs/remark",
      ],
    },
    Object {
      "description": Array [
        "router5 monorepo",
        "Group packages from router5 monorepo together",
      ],
      "groupName": "router5 monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/router5/router5",
      ],
    },
    Object {
      "description": Array [
        "sentry monorepo",
        "Group packages from sentry monorepo together",
      ],
      "groupName": "sentry monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/getsentry/sentry-javascript",
      ],
    },
    Object {
      "description": Array [
        "springfox monorepo",
        "Group packages from springfox monorepo together",
      ],
      "groupName": "springfox monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/springfox/springfox",
      ],
    },
    Object {
      "description": Array [
        "sanity monorepo",
        "Group packages from sanity monorepo together",
      ],
      "groupName": "sanity monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/sanity-io/sanity",
      ],
    },
    Object {
      "description": Array [
        "storybook monorepo",
        "Group packages from storybook monorepo together",
      ],
      "groupName": "storybook monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/storybookjs/storybook",
      ],
    },
    Object {
      "description": Array [
        "strapi monorepo",
        "Group packages from strapi monorepo together",
      ],
      "groupName": "strapi monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/strapi/strapi",
      ],
    },
    Object {
      "description": Array [
        "stryker monorepo",
        "Group packages from stryker monorepo together",
      ],
      "groupName": "stryker monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/stryker-mutator/stryker",
      ],
    },
    Object {
      "description": Array [
        "surveyjs monorepo",
        "Group packages from surveyjs monorepo together",
      ],
      "groupName": "surveyjs monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/surveyjs/surveyjs",
      ],
    },
    Object {
      "description": Array [
        "Swashbuckle monorepo",
        "Group packages from Swashbuckle monorepo together",
      ],
      "groupName": "Swashbuckle monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/domaindrivendev/Swashbuckle.AspNetCore",
      ],
    },
    Object {
      "description": Array [
        "treat monorepo",
        "Group packages from treat monorepo together",
      ],
      "groupName": "treat monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/seek-oss/treat",
      ],
    },
    Object {
      "description": Array [
        "typefaces monorepo",
        "Group packages from typefaces monorepo together",
      ],
      "groupName": "typefaces monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/KyleAMathews/typefaces",
      ],
    },
    Object {
      "description": Array [
        "uppy monorepo",
        "Group packages from uppy monorepo together",
      ],
      "groupName": "uppy monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/transloadit/uppy",
      ],
    },
    Object {
      "description": Array [
        "vue monorepo",
        "Group packages from vue monorepo together",
      ],
      "groupName": "vue monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/vuejs/vue",
      ],
    },
    Object {
      "description": Array [
        "vuepress monorepo",
        "Group packages from vuepress monorepo together",
      ],
      "groupName": "vuepress monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/vuejs/vuepress",
      ],
    },
    Object {
      "description": Array [
        "webdriverio monorepo",
        "Group packages from webdriverio monorepo together",
      ],
      "groupName": "webdriverio monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/webdriverio/webdriverio",
      ],
    },
    Object {
      "description": Array [
        "workbox monorepo",
        "Group packages from workbox monorepo together",
      ],
      "groupName": "workbox monorepo",
      "sourceUrlPrefixes": Array [
        "https://github.com/googlechrome/workbox",
      ],
    },
    Object {
      "description": Array [
        "Group packages from babel6 monorepo together",
      ],
      "groupName": "babel6 monorepo",
      "packagePatterns": Array [
        "^babel6$",
      ],
    },
    Object {
      "description": Array [
        "Group packages from wordpress monorepo together",
      ],
      "groupName": "wordpress monorepo",
      "packagePatterns": Array [
        "^@wordpress/",
      ],
    },
    Object {
      "description": Array [
        "Group packages from angularmaterial monorepo together",
      ],
      "groupName": "angularmaterial monorepo",
      "packagePatterns": Array [
        "^@angular/material",
        "^@angular/cdk",
      ],
    },
    Object {
      "description": Array [
        "Group packages from aws-java-sdk monorepo together",
      ],
      "groupName": "aws-java-sdk monorepo",
      "packagePatterns": Array [
        "^com.amazonaws:aws-java-sdk-",
      ],
    },
  ],
}
`;

exports[`config/presets resolvePreset resolves linters 1`] = `
Object {
  "description": Array [
    "All lint-related packages",
  ],
  "packageNames": Array [
    "babel-eslint",
    "codelyzer",
    "remark-lint",
  ],
  "packagePatterns": Array [
    "^eslint",
    "^stylelint",
    "\\\\btslint\\\\b",
  ],
}
`;

exports[`config/presets resolvePreset resolves nested groups 1`] = `
Object {
  "description": Array [
    "Update lint packages automatically if tests pass",
  ],
  "packageRules": Array [
    Object {
      "automerge": true,
      "description": Array [
        "All lint-related packages",
      ],
      "packageNames": Array [
        "babel-eslint",
        "codelyzer",
        "remark-lint",
      ],
      "packagePatterns": Array [
        "^eslint",
        "^stylelint",
        "\\\\btslint\\\\b",
      ],
    },
  ],
}
`;

exports[`config/presets resolvePreset resolves packageRule 1`] = `
Object {
  "packageRules": Array [
    Object {
      "groupName": "eslint",
      "packageNames": Array [
        "babel-eslint",
      ],
      "packagePatterns": Array [
        "^eslint",
      ],
    },
  ],
}
`;

exports[`config/presets resolvePreset returns same if no presets 1`] = `
Object {
  "foo": 1,
}
`;

exports[`config/presets resolvePreset throws if invalid preset 1`] = `undefined`;

exports[`config/presets resolvePreset throws if invalid preset 2`] = `"Preset name not found within published preset config (wrongpreset:invalid-preset)"`;

exports[`config/presets resolvePreset throws if invalid preset 3`] = `undefined`;

exports[`config/presets resolvePreset throws if invalid preset file 1`] = `undefined`;

exports[`config/presets resolvePreset throws if invalid preset file 2`] = `"Cannot find preset's package (notfound)"`;

exports[`config/presets resolvePreset throws if invalid preset file 3`] = `undefined`;

exports[`config/presets resolvePreset throws if valid and invalid 1`] = `undefined`;

exports[`config/presets resolvePreset throws if valid and invalid 2`] = `"Preset name not found within published preset config (wrongpreset:invalid-preset)"`;

exports[`config/presets resolvePreset throws if valid and invalid 3`] = `undefined`;

exports[`config/presets resolvePreset throws noconfig 1`] = `undefined`;

exports[`config/presets resolvePreset throws noconfig 2`] = `"Preset package is missing a renovate-config entry (noconfig:base)"`;

exports[`config/presets resolvePreset throws noconfig 3`] = `undefined`;

exports[`config/presets resolvePreset throws throw 1`] = `undefined`;

exports[`config/presets resolvePreset throws throw 2`] = `undefined`;

exports[`config/presets resolvePreset throws throw 3`] = `undefined`;

exports[`config/presets resolvePreset works with valid 1`] = `
Object {
  "foo": 1,
  "ignoreDeps": Array [],
  "rangeStrategy": "pin",
}
`;
